# socket

./: .gitignore  LICENSE  README.md
c/: build.sh  install_json.sh  run_client.sh  run_server.sh
c/client/: CMakeLists.txt  client_socket.c
c/server/: CMakeLists.txt  server_socket.c
python/: client.py  server.py  server.py.bak
